<resources>
    <string name="app_name" translatable="false">KBCorder</string>
    <string name="activity_main_bottom_navigation_menu_home_button_text">Home</string>
    <string name="activity_main_bottom_navigation_menu_videos_button_text">Videos</string>
    <string name="activity_main_bottom_navigation_menu_settings_button_text">Settings</string>

    <string name="fragment_videos_search_view_query_hint">Search Videos</string>

    <string name="settings_preference_video_encoder_pref" translatable="false">video_encoder_pref</string>
    <string name="settings_preference_video_bitrate_pref" translatable="false">video_bitrate_pref</string>
    <string name="settings_preference_target_fps_pref" translatable="false">video_fps_pref</string>
    <string name="settings_preference_app_theme_pref" translatable="false">app_theme_pref</string>
    <string name="settings_preference_output_format_pref" translatable="false">video_output_format_pref</string>

    <string name="settings_preference_output_current_directory_text">Current Directory</string>
    <string name="settings_preference_encoder_summary_text">Encoder used for Video(H264 or H263)</string>
    <string name="settings_preference_fps_summary_text">FPS used for Video</string>
    <string name="settings_preference_app_theme_summary_text">Dark/Light App Color Theme</string>
    <string name="settings_preference_bitrate_summary_text">Bitrate used for Video</string>
    <string name="settings_preference_output_format_summary_text">Format for output video file</string>

    <string name="settings_preference_output_directory_text">Output Directory</string>
    <string name="settings_preference_video_bitrate_text">Video Bitrate</string>
    <string name="settings_preference_target_fps_text">Video FPS</string>
    <string name="settings_preference_app_theme_text">App Theme</string>
    <string name="settings_preference_output_format_text">Video Output Format</string>
    <string name="settings_preference_video_encoder_text">Video Encoder</string>

    <string name="fragment_home_start_recording_text_view_text">Start Recording</string>

    <string name="edit_dialog_layout_new_title_hint">New Title</string>
    <string name="settings_preference_output_directory_pref" translatable="false">output_directory_pref</string>
    <string name="settings_preference_app_lang" translatable="false">app_language_pref</string>
    <string name="settings_preference_app_lang_text">App Language</string>
    <string name="settings_preference_lang_summary_text">Language for app</string>

    <string name="settings_preference_theme_chooser_dark_text">Dark</string>
    <string name="settings_preference_theme_chooser_light_text">Light</string>

    <string name="video_edit_dialog_title_text">Editing Video</string>
    <string name="video_edit_dialog_negative_button_text">Cancel</string>
    <string name="video_edit_dialog_positive_button_text">Edit</string>

    <string name="video_delete_dialog_title_text">Deleting Video</string>
    <string name="video_delete_dialog_message_text">Are you sure you want to delete this video?</string>
    <string name="video_delete_dialog_positive_button_text">Delete</string>
    <string name="video_delete_dialog_negative_button_text">Cancel</string>

    <string name="video_info_dialog_title_text">Video Information</string>
    <string name="video_info_dialog_message_name_text">Video Name: </string>
    <string name="video_info_dialog_message_size_text">Video Size: </string>
    <string name="video_info_dialog_message_duration_text">Video Duration: </string>
    <string name="video_info_dialog_positive_button_text">Ok</string>

    <string-array name="video_fps">
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>

    <string-array name="output_formats">
        <item>MPEG4(.mp4)</item>
        <item>WEBM(.webm)</item>
    </string-array>

    <string-array name="video_encoders">
        <item>H263</item>
        <item>H264</item>
    </string-array>

    <string-array name="video_bitrates">
        <item>500kbps</item>
        <item>1mbps</item>
        <item>5mbps</item>
        <item>6mbps</item>
        <item>7mbps</item>
        <item>8mbps</item>
        <item>9mbps</item>
        <item>10mbps</item>
        <item>20mbps</item>
        <item>30mbps</item>
        <item>40mbps</item>
        <item>50mbps</item>
        <item>60mbps</item>
        <item>70mbps</item>
        <item>80mbps</item>
        <item>90mbps</item>
        <item>100mbps</item>
    </string-array>

    <string-array name="video_fps_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>

    <string-array name="output_formats_values">
        <item>2</item>
        <item>9</item>
    </string-array>

    <string-array name="video_encoders_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="video_bitrates_values">
        <item>50000</item>
        <item>1000000</item>
        <item>5000000</item>
        <item>6000000</item>
        <item>7000000</item>
        <item>8000000</item>
        <item>9000000</item>
        <item>10000000</item>
        <item>20000000</item>
        <item>30000000</item>
        <item>40000000</item>
        <item>50000000</item>
        <item>60000000</item>
        <item>70000000</item>
        <item>80000000</item>
        <item>90000000</item>
        <item>100000000</item>
    </string-array>

    <string-array name="app_themes">
        <item>@string/settings_preference_theme_chooser_dark_text</item>
        <item>@string/settings_preference_theme_chooser_light_text</item>
    </string-array>

    <string-array name="app_theme_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    
    <string-array name="app_languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <string-array name="app_languages_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>