<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/settings_preference_output_directory_pref"
        android:title="@string/settings_preference_output_directory_text" />

    <ListPreference
        android:key="@string/settings_preference_video_encoder_pref"
        android:title="@string/settings_preference_video_encoder_text"
        android:summary="@string/settings_preference_encoder_summary_text"
        android:entries="@array/video_encoders"
        android:entryValues="@array/video_encoders_values" />

    <ListPreference
        android:key="@string/settings_preference_video_bitrate_pref"
        android:title="@string/settings_preference_video_bitrate_text"
        android:summary="@string/settings_preference_bitrate_summary_text"
        android:entries="@array/video_bitrates"
        android:entryValues="@array/video_bitrates_values"/>

    <ListPreference
        android:key="@string/settings_preference_target_fps_pref"
        android:title="@string/settings_preference_target_fps_text"
        android:summary="@string/settings_preference_fps_summary_text"
        android:entries="@array/video_fps"
        android:entryValues="@array/video_fps_values"/>

    <ListPreference
        android:key="@string/settings_preference_app_theme_pref"
        android:title="@string/settings_preference_app_theme_text"
        android:summary="@string/settings_preference_app_theme_summary_text"
        android:entries="@array/app_themes"
        android:entryValues="@array/app_theme_values"/>

    <ListPreference
        android:key="@string/settings_preference_output_format_pref"
        android:title="@string/settings_preference_output_format_text"
        android:summary="@string/settings_preference_output_format_summary_text"
        android:entryValues="@array/output_formats_values"
        android:entries="@array/output_formats"/>

</androidx.preference.PreferenceScreen>